# Live-Affect-Analysis

./: .gitignore  benchmark.py  build_categories_dictionary.py  build_matrices.py  evaluate.py  inspect_annotations.py  labels_eda.py  makefile  matrices_eda.py  process_images.py  pyproject.toml  readme.md  train.py  val_eda.py
backend/: demo.py
demo_app/: app.py
demo_app/frontend/: app.js  index.html  style.css
frontend/: app.js  index.html  style.css
src/live_affect_analysis/: afect_analysis_cnn.py  affect_analysis_cnn.py  attention_layer.py  attention_pool.py  baseline_cnn.py  demo_process_fram.py  demo_process_frame.py  frozen_test.py  gated_feature_fusion.py  low_latency_model.py  map.py  process_frame.py
