[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "live_affect_analysis"
version = "0.1.0"
requires-python = ">=3.11, <3.14"

dependencies = [
    "pandas>=2.2,<3",
    "scikit-learn>=1.7,<1.9",
    "numpy>=1.26,<3",
    "tensorflow>=2.16,<3",
    "torch>=2.7,<3",
    "huggingface-hub>=1,<2",
    "streamlit>=1.59,<1.60",
    "datasets>=3.6.0,<4.0.0",
    "opencv-python>=4.13,<5",
    "scipy>=1.1,<2.0",
    "streamlit-webrtc>=0.76.2,<0.77.0",
    "ultralytics>=8.4,<8.5"
]

[tool.setuptools.packages.find]
where = ["src"]